--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -26,5 +26,5 @@ jobs:
       run: dotnet build --no-restore
     - name: Publish
       run: dotnet publish
-    - name: print
-      run: /bin/bash -c ls -la /home/runner/work/testapp/testapp/bin/Release/net8.0/publish
+    - name: Deploy
+      run: scp -i ${ROOT_SSH_KEY}-R /home/runner/work/testapp/testapp/bin/Release/net8.0/publish/* root@mavenweb.mav3n.tech:/var/www/TestApp 
