--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -27,4 +27,4 @@ jobs:
     - name: Publish
       run: dotnet publish
     - name: Deploy
-      run: scp -r -i ${{ROOT_SSH_KEY}} /home/runner/work/testapp/testapp/bin/Release/net8.0/publish root@mavenweb.mav3n.tech:/var/www/TestApp 
+      run: scp -r -i ${{secrets.ROOT_SSH_KEY}}  /home/runner/work/testapp/testapp/bin/Release/net8.0/publish root@mavenweb.mav3n.tech:/var/www/TestApp 
