--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -28,6 +28,7 @@ jobs:
       run: dotnet publish
     - name: Setup SSH
       run: |
+        mkdir -p ~/.ssh
         echo ${{secrets.ROOT_SSH_KEY}} >> ~/.ssh/authorized_keys
         chmod 600 ~/.ssh/authorized_keys
         ssh-add -K ~/.ssh/id_rsa
