--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -29,6 +29,7 @@ jobs:
     - name: Setup SSH
       run: |
         mkdir -p ~/.ssh
+        eval 'ssh-agent -s'
         echo ${{secrets.ROOT_SSH_KEY}} >> ~/.ssh/authorized_keys
         chmod 600 ~/.ssh/authorized_keys
         ssh-add -K ~/.ssh/id_rsa
