--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -29,8 +29,8 @@ jobs:
     - name: Setup SSH
       run: |
         mkdir -p ~/.ssh
+        ssh-agent bash
         echo ${{secrets.ROOT_SSH_KEY}} > ~/.ssh/id_rsa
-        eval 'ssh-agent -s'
         ssh-add ~/.ssh/id_rsa
     - name: Deploy
       run: scp -r  /home/runner/work/testapp/testapp/bin/Release/net8.0/publish root@mavenweb.mav3n.tech:/var/www/TestApp 
