--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -31,6 +31,7 @@ jobs:
         mkdir -p ~/.ssh
         eval `ssh-agent -s`
         echo ${{secrets.ROOT_SSH_KEY}} > ~/.ssh/id_rsa
+        chmod 0600 ~/.ssh/id_rsa
         cat ~/.ssh/id_rsa
         ssh-add ~/.ssh/id_rsa
     - name: Deploy
