--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -31,7 +31,7 @@ jobs:
         mkdir -p ~/.ssh
         eval `ssh-agent -s`
         echo ${{secrets.MAV3N_TECH_SSH}} > ~/.ssh/mav3n.tech
-        chmod 0600 ~/.ssh/mav3.tech
+        chmod 0600 ~/.ssh/mav3n.tech
         cat ~/.ssh/mav3n.tech
         ssh-add ~/.ssh/mav3n.tech
     - name: Deploy
