--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -32,7 +32,6 @@ jobs:
         eval `ssh-agent -s`
         echo ${{secrets.MAV3N_TECH_SSH}} > ~/.ssh/mav3n.tech
         chmod 0600 ~/.ssh/mav3n.tech
-        cat ~/.ssh/mav3n.tech
         ssh-add ~/.ssh/mav3n.tech
     - name: Deploy
-      run: scp -r -i ~/.ssh/mav3n.tech /home/runner/work/testapp/testapp/bin/Release/net8.0/publish root@mavenweb.mav3n.tech:/var/www/TestApp 
+      run: scp -r -i ~/.ssh/mav3n.tech /home/runner/work/testapp/testapp/bin/Release/net8.0/publish/* root@mavenweb.mav3n.tech:/var/www/TestApp 
