--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -34,4 +34,4 @@ jobs:
         chmod 0600 ~/.ssh/mav3n.tech
         ssh-add ~/.ssh/mav3n.tech
     - name: Deploy
-      run: scp -r -i ~/.ssh/mav3n.tech /home/runner/work/testapp/testapp/bin/Release/net8.0/publish/* root@mavenweb.mav3n.tech:/var/www/TestApp 
+      run: scp -r -i ~/.ssh/mav3n.tech /home/runner/work/testapp/testapp/bin/Release/net8.0/publish root@mavenweb.mav3n.tech:/var/www/TestApp 
