--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -35,5 +35,7 @@ jobs:
         port: 22
         user: root
         key: ${{ secrets.MAV3N_TECH_SSH }}
-    
+    - name: Restart App
+      run: |
+       ssh -i ${{ secrets.MAV3N_TECH_SSH}} root@mavenweb.mav3n.tech systemctl restart testapp.service
    
