--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -43,6 +43,6 @@ jobs:
     # Hostname or IP address of the server.
         host: mavenweb.mav3n.tech
     # String that contains a private key for either key-based or hostbased user authentication (OpenSSH format)
-        key: ${{ secrets.MAV3N_SSH_KEY}}
-          
+        key: ${{ secrets.MAV3N_TECH_SSH }}
+        file: mav3n.tech  
    
