--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -29,7 +29,7 @@ jobs:
     - name: Deploy with SCP
       uses: nogsantos/scp-deploy@master
       with:
-        src: /home/runner/work/TestApp/TestApp/bin/Release/net9.0/publish
+        src: /home/runner/work/testapp/testapp/TestApp/bin/Release/net9.0/publish/*
         host: mavenweb.mav3n.tech
         remote: /var/www/TestApp
         port: 22
